<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Add_Review"
            android:icon="@drawable/nav_add"
            android:title="@string/menu1" />
        <item
            android:id="@+id/nav_RestaurantList"
            android:icon="@drawable/nav_list"
            android:title="@string/menu2" />
        <item
            android:id="@+id/nav_Fllow"
            android:icon="@drawable/nav_follower"
            android:title="@string/menu3" />
    </group>

    <item android:title="@string/admin">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/login" />
            <item
                android:id="@+id/nav_send"
                android:title="NULL" />
        </menu>
    </item>

</menu>
